sandbox/output
TicketDispenserTest.java:37: error: cannot find symbol
        MockTurnNumberSequence mockSequence = new MockTurnNumberSequence();
        ^
  symbol:   class MockTurnNumberSequence
  location: class TicketDispenserTest
TicketDispenserTest.java:37: error: cannot find symbol
        MockTurnNumberSequence mockSequence = new MockTurnNumberSequence();
                                                  ^
  symbol:   class MockTurnNumberSequence
  location: class TicketDispenserTest
2 errors
